<resources>
    <string name="app_name">hw</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="activity_edit_profile">activity edit profile</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="name2">Name:</string>
    <string name="age">Age:</string>
    <string name="age2">age</string>
    <string name="Phone">Phone:</string>
    <string name="phone2">Phone</string>
    <string name="body_wwight">Body Weight</string>
    <string name="body_weight3">body weight</string>
</resources>