<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/gradient_background"
    tools:context=".Edit_profiel">


    <TextView
        android:id="@+id/edit_text_edit_profile_name"
        android:layout_width="176dp"
        android:layout_height="28dp"
        android:layout_marginTop="10dp"
        android:text="@string/name2"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.387"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007" />

    <EditText
        android:id="@+id/edit_profile_name_edittext_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_edit_profile_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_text_edit_profile_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_edit_profile_name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/edittext_age"
        android:layout_width="159dp"
        android:layout_height="39dp"
        android:layout_marginTop="15dp"
        android:text="@string/age"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edit_profile_name_edittext_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_profile_name_edittext_2"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_name_edittext_2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edit_profile_number_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/age2"

        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edittext_age"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_profile_name_edittext_2"
        app:layout_constraintTop_toBottomOf="@+id/edittext_age"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/edit_profile_phone"
        android:layout_width="172dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        android:text="@string/Phone"
        android:textSize="25sp"
       android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edit_profile_number_age"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_profile_number_age"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_number_age"
        app:layout_constraintVertical_bias="0.006" />

    <EditText
        android:id="@+id/edit_profile_editext_phone2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/phone2"
        android:inputType="phone"
        android:textSize="15sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edit_profile_phone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_profile_phone"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_phone"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/edit_profile_body_weight"
        android:layout_width="170dp"
        android:layout_height="43dp"
        android:layout_marginTop="15dp"
        android:text="@string/body_wwight"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edit_profile_editext_phone2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_profile_editext_phone2"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_editext_phone2"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

    <EditText
        android:id="@+id/edit_profile_body_weight1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/body_weight3"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edit_profile_body_weight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_profile_body_weight"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_body_weight"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/edit_profile_save_button"
        android:layout_width="129dp"
        android:layout_height="44dp"
        android:layout_marginTop="15dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edit_profile_body_weight1"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="@+id/edit_profile_body_weight1"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_body_weight1"
        app:layout_constraintVertical_bias="0.01" />


</androidx.constraintlayout.widget.ConstraintLayout>